--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   "dependencies": {
     "express": "^4.16.3",
     "mongojs": "^3.1.0",
-    "mongoose": "^5.3.16",
+    "mongoose": "^5.12.3",
+    "mongoose-lean-virtuals": "^0.7.6",
     "morgan": "^1.9.1"
   }
 }
